--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,3 +1,36 @@
-<h2 id="title">Welcome to Ember</h2>
+<div class="row">
+  <div class="col-lg-2 col-md-2 visible-lg">
+    <div class="bs-sidebar affix" id="side-bar">
+      {{#side-bar}}{{/side-bar}}
+    </div>
+  </div>
 
-{{outlet}}
+  <div class="hidden-md hidden-lg">
+    <nav class="navbar navbar-default navbar-fixed-top">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="/">
+            <img alt="Brand" src="/assets/images/emberjs.png" width="60" height="60" class="img-circle">
+          </a>
+          <p class="navbar-text">Learn & Share</p>
+        </div>
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+          <ul class="nav navbar-nav">
+            <li>{{#link-to 'blog'}}Blog{{/link-to}}</li>
+            <li>{{#link-to 'shared'}}Shared{{/link-to}}</li>
+            <li>{{#link-to 'about'}}About{{/link-to}}</li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+  </div>
+  <div class="col-lg-10 col-md-10 main-content">
+    {{liquid-outlet}}
+  </div>
+</div>
