Transitions to routes

--- a/app/templates/components/side-bar.hbs
+++ b/app/templates/components/side-bar.hbs
@@ -1,7 +1,7 @@
 <div class="container-fluid">
   <div class="brand-section">
     <div class="brand-name">
-      <img src="/assets/images/emberjs.png" class="img-rounded" width="60" height="60">
+      <img src="/assets/images/user.png" class="img-rounded" width="60" height="60">
       <span>Learn & Share</span>
       <h5 class="tag-line text-center">Tech Blog, where knowledge is meant to be shared.</h5>
     </div>
