--- a/app/styles/base/details.scss
+++ b/app/styles/base/details.scss
@@ -7,9 +7,9 @@
       cursor: pointer;
     }
 
-    color: $shakesphere-blue;
+    color: $san-marino-blue;
     font-size: $large;
-    font-weight: 800;
+    font-weight: $bold;
     letter-spacing: 1px;
     padding-bottom: 20px;
     border-bottom: 1px solid $gray;
@@ -17,12 +17,12 @@
   .record-info {
     color: $shakesphere-blue;
     font-size: $small;
-    font-style: italic;
+    font-weight: $normal;
     letter-spacing: .5px;
 
     span {
-      color: $dark-gray;
-      font-weight: blog;
+      color: $primary-color-7;
+      font-weight: $bold;
     }
   }
 
@@ -31,9 +31,9 @@
     margin-left: 10px;
 
     p {
-      color: $dark-gray;
+      color: $primary-color-7;
       font-size: 1em;
-      font-style: italic;
+      font-weight: $normal;
       letter-spacing: .5px;
     }
   }
