--- a/app/styles/base/main.scss
+++ b/app/styles/base/main.scss
@@ -15,7 +15,7 @@ body {
 
   .row {
     #side-bar.affix {
-      background-color: $background-color-2;
+      background-image: url('images/background.jpg');
       height: 100vh;
       width: 220px;
     }
