--- a/app/styles/components/side-bar.scss
+++ b/app/styles/components/side-bar.scss
@@ -38,6 +38,11 @@ $rgba1: rgba($black, 0.2);
         &:hover {
           opacity: 0.7;
         }
+        &.active {
+          font-weight: bolder;
+          border-left: 1px solid $orange;
+          padding-left: 10px;
+        }
       }
     }
   }
